# universal_cli

./: .eslintignore  .eslintrc  .lintstagedrc.cjs  Cargo.toml  README.MD  TODO.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: index.ts  main.rs
src/global/: mod.rs
src/global/assets/icon/: icon.ts
src/global/lib/: boxen.ts  chalk.ts  figlet.ts  prompt.ts  shell.ts
src/global/models/: npm_dependency.ts
src/global/styles/: colors.rs
src/global/templates/solid_sample/: index.html  package.json  tsconfig.json
src/global/templates/solid_sample/src/: app.tsx  index.tsx
src/global/utils/: clear.ts  create_directory_content.ts  create_new_feature.ts  create_new_projects.ts  create_new_proyects.ts  dependencies.ts  format_bytes.ts  git.ts  hex_to_rgb.rs  mod.rs  render.ts  text.ts  validate.ts
src/modules/command/: command.rs
src/modules/print/: clear.rs  input.rs  message.rs  mod.rs
src/modules/solid/: solid_sample.ts
