[package]
name = "universal_cli"
description = "the cli for all things"
version = "0.0.1"
authors = ["Luis Monsalve <luismonsalve1941@gmail.com>"]
license = "MIT"
# license-file = "LICENSE.txt"
# documentation = "https://docs.rs/bitflags"
# homepage = "https://serde.rs/"
# repository = "https://github.com/rust-lang/cargo/"
# keywords = ["gamedev", "graphics"]
# categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
edition = "2021"
include = ["/src"]

[dependencies]
regex = "1.7.3"
